@@ -1,3 +1,8 @@
+2006-04-03  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsconnection.c (Connection_getPPD): Better exception when
+	cupsGetPPD2() fails.
+
 2006-03-28  Tim Waugh  <twaugh@redhat.com>
 
 	* cupsppd.c, cupsppd.h, cupsmodule.c: Added Attribute object,
